src/sonare_c_project.h

/// @brief Opaque headless-project handle. Wraps an arrangement EditHistory
///        (owning the Project + MIDI content store) plus an audio content store.
typedef struct SonareProject SonareProject;
/// @brief Heap-owned AssistSidecar snapshot returned by
///        @ref sonare_project_get_assist_sidecar.
///
/// @p module_id is a heap C string (free via
/// @ref sonare_project_free_assist_sidecar). @p payload is a heap byte array
/// of @p payload_len bytes (also freed by the same helper). The core treats the
/// payload as opaque module-owned bytes.
typedef struct {
  char* module_id;
  uint32_t schema_version;
  uint32_t target_track_id;
  double region_start_ppq;
  double region_end_ppq;
  uint8_t* payload;
  size_t payload_len;
} SonareProjectAssistSidecar;
/// @brief Key segment descriptor for @ref sonare_project_annotate_keys.
///
/// @p tonic_pc is 0..11 (C=0) or 255 for unknown. @p mode uses the
/// arrangement KeyMode ordinal (0 unknown, 1 major, 2 minor, 3 dorian,
/// 4 phrygian, 5 lydian, 6 mixolydian, 7 locrian).
typedef struct {
  double start_ppq;
  double end_ppq;
  uint32_t tonic_pc;
  uint32_t mode;
} SonareProjectKeySegment;
/// @brief Chord-symbol descriptor for @ref sonare_project_annotate_chords.
///
/// @p root_pc and @p slash_bass_pc are 0..11 (C=0) or 255 for unknown / none.
/// @p quality uses the arrangement ChordQuality ordinal (0 unknown, 1 major,
/// 2 minor, 3 diminished, 4 augmented, 5 dominant, 6 half-diminished,
/// 7 suspended). @p extensions is copied and may be NULL only when
/// @p extension_count is 0. @p roman_numeral is optional and copied.
typedef struct {
  double start_ppq;
  double end_ppq;
  uint32_t root_pc;
  uint32_t quality;
  const uint8_t* extensions;
  size_t extension_count;
  uint32_t slash_bass_pc;
  const char* roman_numeral;
  int modulation_boundary;
} SonareProjectChordSymbol;
/// @brief A flat MIDI event POD bridging to sonare::arrangement::MidiClipEvent.
///
/// Layout rationale: this C POD is the stable public channel-voice event shape.
/// @p data0 and @p data1 are the first two UMP words of a channel-voice
/// message: callers building a note may pack
///   data0 = (0x2u << 28) | (status << 16) | (note << 8) | velocity, data1 = 0
/// (matching @ref make_midi1_note_on word[0]). The core stores these words in
/// the project and the compiler / SMF exporter interpret valid UMP channel-voice
/// packets as MIDI events. SysEx payloads imported from SMF are carried by an
/// internal side store and are preserved by project serialization / SMF export;
/// they are not constructible through this flat C event POD. @p ppq is the event
/// position within the clip source timeline (quarter notes). Prefer the
/// sonare_midi_* helpers below over hand-packing words.
typedef struct {
  double ppq;
  uint32_t data0;
  uint32_t data1;
} SonareMidiEventPod;
/// @brief Packs a MIDI 1.0 note-on event POD at @p ppq.
SonareError sonare_midi_note_on(double ppq, uint8_t group, uint8_t channel, uint8_t note,
                                uint8_t velocity, SonareMidiEventPod* out);
/// @brief Packs a MIDI 1.0 note-off event POD at @p ppq.
SonareError sonare_midi_note_off(double ppq, uint8_t group, uint8_t channel, uint8_t note,
                                 uint8_t velocity, SonareMidiEventPod* out);
/// @brief Packs a MIDI 1.0 control-change event POD at @p ppq.
SonareError sonare_midi_cc(double ppq, uint8_t group, uint8_t channel, uint8_t controller,
                           uint8_t value, SonareMidiEventPod* out);
/// @brief Packs a MIDI 1.0 poly-pressure event POD at @p ppq.
SonareError sonare_midi_poly_pressure(double ppq, uint8_t group, uint8_t channel, uint8_t note,
                                      uint8_t pressure, SonareMidiEventPod* out);
/// @brief Packs a MIDI 1.0 program-change event POD at @p ppq.
SonareError sonare_midi_program(double ppq, uint8_t group, uint8_t channel, uint8_t program,
                                SonareMidiEventPod* out);
/// @brief Packs a MIDI 1.0 channel-pressure event POD at @p ppq.
SonareError sonare_midi_channel_pressure(double ppq, uint8_t group, uint8_t channel,
                                         uint8_t pressure, SonareMidiEventPod* out);
/// @brief Packs a MIDI 1.0 pitch-bend event POD at @p ppq. @p bend is 0..16383,
///        center = 8192.
SonareError sonare_midi_pitch_bend(double ppq, uint8_t group, uint8_t channel, uint16_t bend,
                                   SonareMidiEventPod* out);
// ============================================================================
// Assist sidecars (opaque module state)
// ============================================================================

/// @brief Adds or updates an opaque assist sidecar by module id + target scope.
///
/// The payload is copied. Existing sidecars with the same module id,
/// target_track_id, region_start_ppq, and region_end_ppq are replaced via an
/// undoable command; otherwise a new sidecar is appended. @p module_id must be a
/// non-empty NUL-terminated string. @p payload may be NULL only when
/// @p payload_len is 0.
SonareError sonare_project_set_assist_sidecar(SonareProject* project, const char* module_id,
                                              uint32_t schema_version, uint32_t target_track_id,
                                              double region_start_ppq, double region_end_ppq,
                                              const uint8_t* payload, size_t payload_len);
/// @brief Number of assist sidecars currently stored on the project.
size_t sonare_project_assist_sidecar_count(const SonareProject* project);
/// @brief Reads one assist sidecar by stable project order.
///
/// On success @p out owns heap memory and must be released with
/// @ref sonare_project_free_assist_sidecar. On failure @p out is zeroed.
SonareError sonare_project_get_assist_sidecar(const SonareProject* project, size_t index,
                                              SonareProjectAssistSidecar* out);
/// @brief Frees heap fields returned by @ref sonare_project_get_assist_sidecar
///        and zeros the struct. NULL is safe.
void sonare_project_free_assist_sidecar(SonareProjectAssistSidecar* sidecar);
// ============================================================================
// MIR (offline analysis -> edit commands; deterministic)
// ============================================================================

/// @brief Detects tempo from a mono audio buffer and installs the primary
///        tempo-segment estimate via an edit command (undoable). Uses the
///        beat analysis -> tempo bridge. @p out_bpm (optional) receives the
///        primary BPM.
SonareError sonare_project_auto_tempo(SonareProject* project, const float* audio, size_t len,
                                      int sample_rate, float* out_bpm);
/// @brief Snaps a PPQ coordinate to the nearest beat of the project's grid at
///        that position. @p strength in [0,1] (0 = no snap, 1 = exact line).
SonareError sonare_project_snap_to_grid(const SonareProject* project, double ppq, double strength,
                                        double* out_ppq);
/// @brief Replaces the project's key annotation stream via an undoable command.
///
/// Existing chord / section / onset annotations are preserved. @p keys may be
/// NULL only when @p count is 0.
SonareError sonare_project_annotate_keys(SonareProject* project,
                                         const SonareProjectKeySegment* keys, size_t count);
/// @brief Replaces the project's chord-symbol annotation stream via an
///        undoable command. @p chords may be NULL only when @p count is 0.
SonareError sonare_project_annotate_chords(SonareProject* project,
                                           const SonareProjectChordSymbol* chords, size_t count);
// ============================================================================
// Memory management (heap byte buffers)
// ============================================================================

/// @brief Frees a heap byte buffer returned by @ref sonare_project_export_smf.
void sonare_free_bytes(uint8_t* ptr);