bindings/python/src/libsonare/_ffi_signatures_project.py


        for _name, _args in {
            "sonare_midi_note_on": [
                ctypes.c_double,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.POINTER(SonareMidiEventPod),
            ],
            "sonare_midi_note_off": [
                ctypes.c_double,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.POINTER(SonareMidiEventPod),
            ],
            "sonare_midi_cc": [
                ctypes.c_double,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.POINTER(SonareMidiEventPod),
            ],
            "sonare_midi_poly_pressure": [
                ctypes.c_double,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.POINTER(SonareMidiEventPod),
            ],
            "sonare_midi_program": [
                ctypes.c_double,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.POINTER(SonareMidiEventPod),
            ],
            "sonare_midi_channel_pressure": [
                ctypes.c_double,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.POINTER(SonareMidiEventPod),
            ],
            "sonare_midi_pitch_bend": [
                ctypes.c_double,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint16,
                ctypes.POINTER(SonareMidiEventPod),
            ],
        }.items():
            if hasattr(lib, _name):
                _fn = getattr(lib, _name)
                _fn.restype = ctypes.c_int32
                _fn.argtypes = _args

        # MIR.
        lib.sonare_project_auto_tempo.restype = ctypes.c_int32
        lib.sonare_project_auto_tempo.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_float),
        ]

        lib.sonare_project_snap_to_grid.restype = ctypes.c_int32
        lib.sonare_project_snap_to_grid.argtypes = [
            ctypes.c_void_p,
            ctypes.c_double,
            ctypes.c_double,
            ctypes.POINTER(ctypes.c_double),
        ]

        lib.sonare_project_annotate_keys.restype = ctypes.c_int32
        lib.sonare_project_annotate_keys.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(SonareProjectKeySegment),
            ctypes.c_size_t,
        ]

        lib.sonare_project_annotate_chords.restype = ctypes.c_int32
        lib.sonare_project_annotate_chords.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(SonareProjectChordSymbol),
            ctypes.c_size_t,
        ]

        # Assist sidecars (opaque module state).
        lib.sonare_project_set_assist_sidecar.restype = ctypes.c_int32
        lib.sonare_project_set_assist_sidecar.argtypes = [
            ctypes.c_void_p,
            ctypes.c_char_p,
            ctypes.c_uint32,
            ctypes.c_uint32,
            ctypes.c_double,
            ctypes.c_double,
            ctypes.POINTER(ctypes.c_uint8),
            ctypes.c_size_t,
        ]

        lib.sonare_project_assist_sidecar_count.restype = ctypes.c_size_t
        lib.sonare_project_assist_sidecar_count.argtypes = [ctypes.c_void_p]

        lib.sonare_project_get_assist_sidecar.restype = ctypes.c_int32
        lib.sonare_project_get_assist_sidecar.argtypes = [
            ctypes.c_void_p,
            ctypes.c_size_t,
            ctypes.POINTER(SonareProjectAssistSidecar),
        ]

        lib.sonare_project_free_assist_sidecar.restype = None
        lib.sonare_project_free_assist_sidecar.argtypes = [
            ctypes.POINTER(SonareProjectAssistSidecar)
        ]

        # Heap byte-buffer free helper (SMF export).
        lib.sonare_free_bytes.restype = None
        lib.sonare_free_bytes.argtypes = [ctypes.POINTER(ctypes.c_uint8)]
